[DEBIAN10] Fix java/callouts subtest failure due to Java 11 compiler warnings and better error messages
This subtest failed on our new Debian 10 box with the following diff

10a11,12
> Note: java_0/callouts/com/test/Test3.java uses or overrides a deprecated API.
> Note: Recompile with -Xlint:deprecation for details.
11a14,21
> 4c4
> < %YDB-E-JNI, java.lang.ClassCastException: class java.lang.Integer cannot be cast to class java.lang.String (java.lang.Integer and java.lang.String are in module java.base of loader 'bootstrap')
> ---
> > %YDB-E-JNI, java.lang.ClassCastException: java.lang.Integer cannot be cast to java.lang.String
> 8c8
> < %YDB-E-JNI, java.lang.ArrayIndexOutOfBoundsException: Index 3 out of bounds for length 2
> ---
> > %YDB-E-JNI, java.lang.ArrayIndexOutOfBoundsException: 3

1) The deprecated API warning is because of the "new Integer(0)" usage. It is instead recommended to
   use "Integer.valueOf(0)" so that is now done.

2) The YDB-E-JNI message differences are because Java 11 (on Debian 10) issues different error messages.
   So the test is now enhanced to expect different error messages depending on whether Java 11 or higher
   is in use OR a version less than Java 11 is in use.